--- a/package/package.json
+++ b/package/package.json
@@ -18,8 +18,8 @@
   "author": "Niels Bosman",
   "license": "MIT",
   "peerDependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.0.0-rc-fb9a90fa48-20240614",
+    "react-dom": "19.0.0-rc-fb9a90fa48-20240614"
   },
   "devDependencies": {
     "@types/react": "18.3.11",
